# UR5-grasp-and-kinect-demo-on-gazebo

./: .ycm_extra_conf.py  README.md  readme.md
src/: readme.md
src/UR_with_Robotiq_grasp_gazebo/: readme.md
src/UR_with_Robotiq_grasp_gazebo/depends/ur5_gazebo_controllers/: CMakeLists.txt  package.xml
src/UR_with_Robotiq_grasp_gazebo/ur_tc/confgi/: .setup_assistant  CMakeLists.txt  package.xml
src/UR_with_Robotiq_grasp_gazebo/ur_tc/smart_grasping_sandbox_sample/: CMakeLists.txt  package.xml
src/UR_with_Robotiq_grasp_gazebo/ur_tc/ur_desc/: CMakeLists.txt  package.xml
src/UR_with_Robotiq_grasp_gazebo/ur_tc/urwh_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/grasp_msg/: CMakeLists.txt  package.xml
src/grasp_msg/msg/: newmsg2.msg
src/grasp_msg/script/: listener.py  talker.py
src/grasp_msg/src/: talkerr.cpp
src/qt_test/: CMakeLists.txt  package.xml
src/qt_test/src/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qnode.cpp  qnode.h  qt_app_node.cpp
src/test_ikfast_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  ur5_manipulator_moveit_ikfast_plugin_description.xml
src/test_ikfast_plugin/src/: ur5_manipulator_ikfast_moveit_plugin.cpp  ur5_manipulator_ikfast_solver.cpp
src/universal_robot/ur5_moveit_config/config/: kinematics.yaml
src/universal_robot/ur_description/urdf/: ur5_robot.urdf
src/urwh_ikfast_arm_plugin/: CMakeLists.txt  package.xml  update_ikfast_plugin.sh  urwh_arm_moveit_ikfast_plugin_description.xml
src/urwh_ikfast_arm_plugin/src/: urwh_arm_ikfast_moveit_plugin.cpp  urwh_arm_ikfast_solver.cpp
(+108 files in other folders)
